[package]
name = "hyperkeys"
version = "0.1.0"
edition = "2021"
authors = ["Text Expander Team"]
description = "HyperKeys - Retro-futuristic terminal text expansion system"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
directories = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", features = ["bundled"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
hostname = "0.3"
mac_address = "1.1"
ratatui = "0.24"
crossterm = "0.27"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon", "winuser"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
